[project]
name = "probable-sniffle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]
